--- a/BnB/web_static/styles/6-filters.css
+++ b/BnB/web_static/styles/6-filters.css
@@ -5,7 +5,7 @@
     border: solid 1px #DDDDDD;
     border-radius: 4px;
     display: flex;
-    justify-content: flex-end;
+    /*justify-content: flex-end;*/
     align-items: center;
 }
 
@@ -31,14 +31,14 @@ section.filters button:hover{
     border-width: 1px;
     height: 100%;
     width: 25%;
-    margin-left: 30px;
+    margin-left: 0px;
 }
 
 .amenities {
     height: 100%;
     width: 25%;
     margin-right: 25%;
-    margin-left: 30px;
+    margin-left: 0px;
 }
 
 section.filters h3 {
@@ -58,8 +58,17 @@ section.filters h4 {
     border: solid #DDDDDD 1px;
     border-radius: 4px;
     list-style: None;
+    margin: 0px;
 }
 
 .popover ul {
     list-style: None;
+}
+
+.popover h2 {
+    margin: 0px;
+}
+
+.popover h3 {
+    margin: 0px:
 }
