--- a/BnB/web_static/styles/5-filters.css
+++ b/BnB/web_static/styles/5-filters.css
@@ -1,53 +1,61 @@
-.filters{
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: solid 1px #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-section.filters button{
-    font-size: 18px;
-    color: white;
-    background-color: #FF5A5F;
-    height: 48px;
-    border: 0px;
-    border-radius: 4px;
-    width: 20%;
-    margin-right: 30px;
-    opacity: 1;
-}
-
-section.filters button:hover{
-    opacity: 0.9;
+.filters {
+	background-color: white;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;	
 }
 
 .locations {
-    border-right-style: solid;
-    border-right-color: #DDDDDD;
-    border-width: 1px;
-    height: 100%;
-    width: 25%;
-    margin-left: 30px;
+	display: inline-block;
+	vertical-align: middle;
+
+	height: 100%;
+	width: 25%;
+
+	margin-left: 45px;
+	border-right: 1px solid #DDDDDD;
 }
 
 .amenities {
-    height: 100%;
+	display: inline-block;
+	vertical-align: middle;
+
+	height: 100%;
     width: 25%;
-    margin-right: 25%;
-    margin-left: 30px;
+
+	margin-left: 45px;
 }
 
-section.filters h3 {
-    font-weight: 600;
-    margin-bottom: 0px;
+h3 {
+	font-weight: 600;
+	margin-top: 12px;
+	margin-bottom: 5px;	
 }
 
-section.filters h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin-top: 0px;
+h4 {
+	font-size: 14px;
+	font-weight: 400;
+	margin-top: 5px;
+	margin-bottom: 12px;
+}
+
+button {
+	color: #FFFFFF;
+	font-size: 18px;
+	
+	height: 48px;
+	width: 20%;
+	background-color: #FF5A5F;
+	border-style: none;
+	border-radius: 4px;
+
+	float: right;
+	margin-top: 11px;
+	margin-bottom: 11px;
+	margin-right: 30px;
+}
+
+button:hover {
+	opacity: 90%;
 }
